k8s/lemur-flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: lemur-flask
  name: web
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: lemur-flask
