k8s/lemur-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: lemur-nginx
  name: lemur-nginx
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: lemur-nginx
