k8s/lemur-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lemur-ingress
  namespace: lemur
spec:
  backend:
    serviceName: lemur-nginx
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: lemur-flask
          servicePort: 80
